# wolf-crypto

./: Cargo.toml  wolfcrypt-update-checklist.org
wolf-crypto/: Cargo.toml  LICENSE  README.md  README.org
wolf-crypto-sys/: Cargo.toml  README.org  build.rs  wrapper.h
wolf-crypto-sys/src/: lib.rs
wolf-crypto/benches/: aes-gcm.rs
wolf-crypto/fuzz/: Cargo.toml
wolf-crypto/fuzz/fuzz_targets/: chacha20poly1305_update.rs  hex.rs
wolf-crypto/src/: buf.rs  ct.rs  error.rs  lib.rs  macros.rs  opaque_res.rs  ptr.rs  sealed.rs
wolf-crypto/src/aead/: aad.rs  aes_gcm.rs  chacha20_poly1305.rs  mod.rs  tag.rs
wolf-crypto/src/aead/chacha20_poly1305/: io.rs  states.rs
wolf-crypto/src/aes/: ctr.rs  gcm.rs  mod.rs  test_utils.rs
wolf-crypto/src/chacha/: key.rs  mod.rs  state.rs  states.rs
wolf-crypto/src/hash/: api_gen.rs  blake2b.rs  blake2s.rs  blake_api.rs  md4.rs  md5.rs  mod.rs  ripemd_160.rs  sha.rs  sha224.rs  sha256.rs  sha384.rs  sha3_224.rs  sha3_256.rs  sha3_384.rs  sha3_512.rs  sha512.rs  sha512_224.rs  sha512_256.rs  shake128.rs  shake256.rs  shake_api.rs
wolf-crypto/src/kdf/: hmac.rs  mod.rs  pbkdf.rs  pbkdf2.rs
wolf-crypto/src/mac/: mod.rs
wolf-crypto/src/mac/hmac/: algo.rs  digest.rs  mod.rs
wolf-crypto/src/mac/poly1305/: key.rs  mod.rs  state.rs
wolf-crypto/src/random/: mod.rs
wolf-crypto/tests/: README.md  README.org  nist_hmacvs.rs  nist_kats.rs  nist_mct.rs
wolf-crypto/tests/common/: buf.rs  files.rs  hmacvs.rs  kat.rs  load.rs  mct.rs  mod.rs  parse.rs  trusted_url.rs
