[package]
name = "wolf-crypto"
version = "0.1.0-alpha.9"
edition = "2021"
license = "GPL-2.0-only"
categories = ["no-std", "cryptography"]
keywords = ["sha2", "sha3", "aes", "crypto", "wolfcrypt"]
authors = ["Clelland Green <cg@ironvelo.com>"]
repository = "https://github.com/CleveGreen/wolf-crypto/tree/main/wolf-crypto"
documentation = "https://docs.rs/wolf-crypto"
readme = "README.md"
description = "Safe and thin API for wolfSSL's wolfcrypt"

[features]
std = ["alloc"]
alloc = []
can-panic = []
allow-non-fips = []
llvm-assume = []

default = ["can-panic", "allow-non-fips"]

[dependencies]
wolf-crypto-sys = { version = "0.1.0-alpha.3" }
# wolf-crypto-sys = { path = "../wolf-crypto-sys" }
zeroize = { version = "1.8.1" }
embedded-io = { version = "0.6.1", optional = true }

[dev-dependencies]
aes-gcm = "0.10.3"
criterion = "0.5.1"
proptest = "1.5.0"
ctr = "0.9.2"
aes = "0.8.4"
digest = "0.10.7"
sha2 = "0.10.8"
sha3 = "0.10.8"
md-5 = "0.10.6"
md4 = "0.10.2"
ripemd = "0.1.3"
sha1 = "0.10.6"
blake2 = "0.10.6"
rand = "0.8.5"
hex-literal = "0.4.1"
hex = "0.4.3"

[[bench]]
name = "aes-gcm"
harness = false

[[bench]]
name = "chacha20_poly1305"
harness = false

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }