[package]
name = "wolf-crypto"
version = "0.1.0-alpha.13"
edition = "2021"
license = "GPL-2.0-only"
categories = ["no-std", "no-std::no-alloc", "cryptography"]
keywords = ["digest", "aead", "cipher", "crypto", "wolfcrypt"]
authors = ["Clelland Green <cg@ironvelo.com>"]
repository = "https://github.com/CleveGreen/wolf-crypto/tree/main/wolf-crypto"
documentation = "https://docs.rs/wolf-crypto"
readme = "README.md"
description = "Safe and thin API for wolfSSL's wolfcrypt"
exclude = [
    "llvm",
    "*~",
    "*.bc",
    "*.ll",
    "benches"
]

[features]
std = ["alloc"]
alloc = []
can-panic = []
allow-non-fips = []
llvm-assume = []

default = ["can-panic", "allow-non-fips"]

[dependencies]
wolf-crypto-sys = { version = "0.1.0-alpha.4" }
# wolf-crypto-sys = { path = "../wolf-crypto-sys" }
zeroize = { version = "1.8.1" }
embedded-io = { version = "0.6.1", optional = true }

[dev-dependencies]
aes-gcm = "0.10.3"
criterion = "0.5.1"
proptest = "1.5.0"
ctr = "0.9.2"
aes = "0.8.4"
digest = "0.10.7"
sha2 = "0.10.8"
sha3 = "0.10.8"
md-5 = "0.10.6"
md4 = "0.10.2"
ripemd = "0.1.3"
sha1 = "0.10.6"
blake2 = "0.10.6"
rand = "0.8.5"
hex-literal = "0.4.1"
hex = "0.4.3"
poly1305 = "0.8.0"
hmac = "0.12.1"
pbkdf2 = { version = "0.12.2", features = ["hmac"] }
hkdf = "0.12.4"

[[bench]]
name = "aes-gcm"
harness = false

[[bench]]
name = "chacha20_poly1305"
harness = false

[[bench]]
name = "ct"
harness = false

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)', 'cfg(llvm_ir_check)', 'cfg(check)'] }