[package]
name = "wolf-crypto-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.wolf-crypto]
path = ".."

[[bin]]
name = "chacha20poly1305_update"
path = "fuzz_targets/chacha20poly1305_update.rs"
test = false
doc = false
bench = false

[[bin]]
name = "hex"
path = "fuzz_targets/hex.rs"
test = false
doc = false
bench = false